fix multitouch for jump button

--- a/src/components/JumpButton.css
+++ b/src/components/JumpButton.css
@@ -18,8 +18,8 @@
 
 .JumpButton::after {
   content: '';
-  height: 100px !important;
-  width: 100px !important;
+  height: 120px !important;
+  width: 120px !important;
   position: absolute;
   transform-origin: center;
   background-color: var(--pale-yellow);
